--- a/sistema/src/pages/SignUp/signUp.css
+++ b/sistema/src/pages/SignUp/signUp.css
@@ -1,4 +1,4 @@
-
+/* 
 
 
 .container-center {
@@ -78,4 +78,4 @@ form button:hover{
     margin: 20px 0;
     color: #181c2e;
     cursor: pointer;
-}
+} */
