--- a/sistema/src/components/Title/title.css
+++ b/sistema/src/components/Title/title.css
@@ -4,12 +4,12 @@
     flex-direction: row;
     align-items: center;
     margin: 1rem 0;
-    padding: .8rem;
+    padding: .7rem;
     background-color: #f8f8f8;
     border-radius: 5px;
 }
 
 .title span{
-    margin-left: 1rem;
+    margin-left: .7rem;
     font-size: 15px;
 }
