--- a/sistema/src/components/Header/header.css
+++ b/sistema/src/components/Header/header.css
@@ -49,6 +49,11 @@
     margin-bottom: 3px;
 }
 
+.content{
+    margin-left: 200px;
+    padding: 1px 16px;
+}
+
 @media screen and (max-width: 700px) {
     .sidebar{
         width: 100%;
@@ -66,6 +71,10 @@
 
     .sidebar a svg{
         display: none;
+    }
+
+    .content{
+        margin-left: 0px;
     }
 
 }
