--- a/sistema/src/pages/Perfil/perfil.css
+++ b/sistema/src/pages/Perfil/perfil.css
@@ -1,5 +1,4 @@
-
-.container{
+.container {
     display: flex;
     background-color: #f8f8f8;
     border-radius: 5px;
@@ -7,7 +6,7 @@
     align-items: center;
 }
 
-.label-avatar{
+.label-avatar {
     width: 280px;
     height: 280px;
     display: flex;
@@ -17,37 +16,94 @@
     cursor: pointer;
 }
 
-.label-avatar input{
+.label-avatar input {
     display: none;
 }
 
-.label-avatar span{
+.label-avatar span {
     z-index: 99;
     position: absolute;
     opacity: 0.7;
     transition: all .5s;
 }
 
-.label-avatar span:hover{
+.label-avatar span:hover {
     opacity: 1;
     transform: scale(1.8);
 }
 
-.form-perfil img{
+/* .form-perfil{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+.form-perfil img {
     margin-bottom: 1rem;
     border-radius: 50%;
     object-fit: cover;
 }
 
-.form-perfil label{
+.form-perfil label {
     margin-bottom: 1.5rem;
     font-size: 1.2rem;
 }
 
-.form-perfil input, textarea, select{
+.form-perfil input,
+textarea,
+select {
     margin-bottom: 1.5rem;
-    padding: .7rem;
-    /* border: 0; */
+    padding: .5rem;
     border-radius: 5px;
-    max-width: 400px;
+    max-width: 350px;
+    width: 350px;
+    font-size: 20px;
 }
+
+.form-perfil input:disabled {
+    cursor: not-allowed;
+}
+
+.btn-dash {
+    height: 35px;
+    width: 120px;
+    bottom: 0;
+    border-radius: 4px;
+    background-color: #181c2e;
+    color: #fff;
+    font-size: 15px;
+    margin: auto;
+    margin-left: 0px;
+    transition: all .5s;
+    font-weight: 600;
+}
+
+.btn-dash:hover {
+    color: #181c2e;
+    background-color: #fff;
+}
+
+.sair-btn {
+
+    height: 35px;
+    width: 120px;
+    bottom: 0;
+    border-radius: 4px;
+    color: #fff;
+    font-size: 15px;
+    margin: auto;
+    margin-left: 0px;
+    transition: all .5s;
+    font-weight: 600;
+
+    background-color: #950202;
+    color: #fff;
+    margin-top: 1px;
+}
+
+.sair-btn:hover {
+    color: #950202;
+    background-color: #fff;
+    border: 1px solid #950202;
+}
+
