--- a/sistema/src/pages/Dashboard/dashboard.css
+++ b/sistema/src/pages/Dashboard/dashboard.css
@@ -7,23 +7,23 @@
 }
 
 .dashboard span{
-    margin: 2rem 0;
-    font-size: 1.2rem;
+    margin: 2em 0;
+    font-size: 1.2em;
     font-weight: 600;
 }
 
 .novo{
     float: right;
-    margin-bottom: 1rem;
+    margin-bottom: 1em;
     background-color: #83bf02;
     color: #fff;
     border: 0;
-    padding: .5rem;
+    padding: .5em;
     display: flex;
     justify-content: center;
     align-items: center;
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 1em;
     border-radius: 6px;
     transition: ease-in 0.2s;
 }
@@ -35,4 +35,49 @@
 
 .novo svg{
     margin-right: 5px;
+}
+
+table{
+    border:  1px solid #ccc;
+    border-collapse: collapse;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    table-layout: fixed;
+}
+
+table caption{
+    font-size: 1.2em;
+    margin: .5em 0 .75em;
+}
+
+table tr{
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    padding: .35em;
+}
+
+table th, 
+table td{
+    padding: .62em;
+    text-align: center;
+}
+
+table th{
+    font-size: .85em;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+}
+
+table td .acao{
+    border: 0;
+    padding: 5px;
+    margin-right: 2px;
+    align-items: center;
+    display: inline-block;
+    border-radius: 4px;
+}
+
+table td .acao svg{
+    vertical-align: middle;
 }
