--- a/sistema/src/pages/Dashboard/dashboard.css
+++ b/sistema/src/pages/Dashboard/dashboard.css
@@ -72,7 +72,7 @@ table th{
 table td .acao{
     border: 0;
     padding: 5px;
-    margin-right: 2px;
+    margin: 6px;
     align-items: center;
     display: inline-block;
     border-radius: 4px;
@@ -88,3 +88,38 @@ table td .andamento{
     color: #fff;
 }
 
+
+@media screen and (max-width: 600px) {
+    table{
+        border: 0;
+    }
+
+    table caption{
+        font-size: 1.3rem;
+    }
+
+    table thead{
+        border: none;
+        clip: rect(0 0 0 0);
+        height: 1px;
+        margin: -1px;
+        overflow: hidden;
+        padding: 0;
+        position: absolute;
+        width: 1px;
+    }
+
+    table tr{
+        border-bottom: 3px solid #ddd;
+        display: block;
+        margin-bottom: .65em;
+    }
+
+    table td{
+        border-bottom: 1px solid #ddd;
+        display: block;
+        font-size: .8em;
+        text-align: right;
+    }
+    
+}
