--- a/sistema/src/pages/Novo/novo.css
+++ b/sistema/src/pages/Novo/novo.css
@@ -1,7 +1,7 @@
 
-.container{
+.container-novo-chamado{
     display: flex;
-    background-color: rgb(207, 133, 133);
+    background-color: #bababa;
     border-radius: 5px;
     padding: .8em;
     align-items: center;
@@ -10,14 +10,14 @@
     height: 750px;
   }
 
-  .form-perfil-cliente{
+  .novo-chamado{
     display: flex;
     align-items: center;
     
   }
 
 form textarea{
-    height: 145px;
+    height: 115px;
     resize: none;
 }
 
@@ -29,35 +29,26 @@ form input[type='radio']:not(:first-child){
     margin-left: 15px;
 }
 
-.status span{
-    padding-left: .5em;
-    font-size: 1.3em;
+.status{
+  margin-bottom: 30px;
 }
 
-.form-profile-cliente label{
+.status span{
+    padding-left: .5em;
+    font-size: 1em;
+}
+
+.novo-chamado label{
     margin-bottom: .5em;
     font-size: 1.4em;
   }
   
-  .form-profile-cliente input, textarea, select{
-    margin-bottom: 1em;
-    padding: .7em;
-    border:0;
-    border-radius: 5px;
-    max-width: 600px;
-  }
+ .novo-chamado-btn{
+  background-color: #2502bf;
+ }
 
-  .form-profile-cliente button{
-    max-width: 600px;
-  }
-  
-  .logout-btn{
-    padding: 8px 20px;
-    background-color: transparent;
-    border:1px solid #121212;
-    border-radius: 5px;
-    font-size: 1.5em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+ .novo-chamado-btn:hover{
+  background-color: #441aff;
+  color: #fff;
+ }
+ 
