--- a/sistema/src/pages/Novo/novo.css
+++ b/sistema/src/pages/Novo/novo.css
@@ -5,6 +5,7 @@
     border-radius: 5px;
     padding: .8em;
     align-items: center;
+    justify-content: center;
     margin-bottom: 1em;
     max-height: 550px;
     height: 750px;
@@ -18,6 +19,7 @@
 
 form textarea{
     height: 115px;
+    width: 245px;
     resize: none;
 }
 
@@ -41,6 +43,10 @@ form input[type='radio']:not(:first-child){
 .novo-chamado label{
     margin-bottom: .5em;
     font-size: 1.4em;
+  }
+
+  .novo-chamado select{
+    width: 250px;
   }
   
  .novo-chamado-btn{
