--- a/sistema/src/pages/Dashboard/dashboard.css
+++ b/sistema/src/pages/Dashboard/dashboard.css
@@ -71,7 +71,7 @@ table th{
     text-transform: uppercase;
 }
 
-table td .acao{
+table td .btn-acao{
     border: 0;
     padding: 5px;
     margin: 3px;
@@ -80,7 +80,7 @@ table td .acao{
     border-radius: 4px;
 }
 
-table td .acao svg{
+table td .btn-acao svg{
     vertical-align: middle;
 }
 
