--- a/sistema/src/pages/Dashboard/dashboard.css
+++ b/sistema/src/pages/Dashboard/dashboard.css
@@ -5,6 +5,7 @@
     justify-content: center;
     flex-direction: column;
     background-color: #bababa;
+    color: #1836f4;
 }
 
 .container-dashboard span{
